<resources>
    <string name="app_name">Bibliothéque</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="booky">Booky</string>
    <string name="your_book_library_at_the_office">Your book library at the office</string>
    <string name="sign_in">sign in</string>
    <string name="register">Register</string>
    <string name="full_name">full_name</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="Sign_In">Sign In</string>
    <string name="already_registred">Already Registred ?</string>
    <string name="forget_password">Forget Password</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="favourite">Favourite</string>
    <string name="libranova">LibraNova</string>
    <string name="events">Events</string>
    <string name="favorites">Favorites</string>
    <string name="postes">Postes</string>
    <string name="setting">Setting</string>
    <string name="posts">Posts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Setting</string>
    <string name="helene">Helene</string>
    <string name="heleneboukhali_gmail_com">heleneboukhali@gmail.com</string>
    <string name="log_out">Log Out</string>
    <string name="reset_password">Reset Password</string>
    <string name="send">Send</string>
    <string name="change_password">Change Password</string>
    <string name="reset">Reset</string>

</resources>