<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_filled_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/baseline_event_available_24"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_postes"
            android:icon="@drawable/baseline_post_add_24"
            android:title="@string/posts" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/setting" />
    </group>
</menu>