<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="tn.esprit.bibliothque.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_events"
        android:name="tn.esprit.bibliothque.ui.Events.EventsFragment"
        android:label="@string/events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="tn.esprit.bibliothque.ui.Favorites.FavoriteFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/postsFragment"
        android:name="tn.esprit.bibliothque.ui.Posts.PostsFragment"
        android:label="@string/posts"
        tools:layout="@layout/fragment_posts" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="tn.esprit.bibliothque.ui.Settings.SettingFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_setting" />
</navigation>